Fixed spacing for smaller devices

--- a/components/navbar_style.module.css
+++ b/components/navbar_style.module.css
@@ -1,8 +1,8 @@
 /* Define the main Navigation block */
 .navBar {
     display: flex;
-    padding-left: 20%;
-    padding-right: 20%;
+    padding-left: 15%;
+    padding-right: 15%;
     width: 100%;
     height: 100px;
     line-height: 50px;
@@ -10,15 +10,26 @@
     justify-content: space-around;
     
 }
+
+@media (max-width: 800px){
+    .navBar{
+        padding: 0% 5%;
+    }
+
+    .navBar li {
+        font-size: 4vw;
+    }
+}
 /* Remove bullets, margin and padding */
 .navBar ul {
     list-style: none;
     padding: 0;
     margin: 0;
     color: #0a97f5;
-    font-size: 30px;
+    font-size: 2vw;
     font-family: sans-serif;
     font-style: italic;
+    font-weight: bold;
 }
 
 .navBar li {
