--- a/styles/globals.css
+++ b/styles/globals.css
@@ -91,8 +91,4 @@ ol {
   line-height: 2.3;
 }
 
-.row{
-  padding: 10px 40px 20px 40px;
-  
-}
 
